--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-Flask
-requests
-selenium
-webdriver-manager
-beautifulsoup4
-openai
-markdown
-weasyprint
-PyQt5
+requests>=2.28.0
+openai>=1.0.0
+PyQt5>=5.15.6
+PyQtWebEngine>=5.15.6     # HTML 툴팁용 (선택)
+fpdf>=1.7.2               # PDF 출력용 (선택)
